@@ -5,10 +5,6 @@ import static com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAMode
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
-import javax.persistence.JoinColumn;
-import javax.persistence.JoinTable;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -19,6 +15,9 @@ import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAJoinTable;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAOnConditionItem;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAPath;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAModelException;
+
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.JoinTable;
 
 class IntermediateJoinTable implements JPAJoinTable {
   private static final Log LOGGER = LogFactory.getLog(IntermediateJoinTable.class);
@@ -103,7 +102,7 @@ class IntermediateJoinTable implements JPAJoinTable {
   public List<JPAPath> getRightColumnsList() throws ODataJPAModelException {
     return getInverseJoinColumns().stream()
         .map(JPAOnConditionItem::getRightPath)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -111,7 +110,7 @@ class IntermediateJoinTable implements JPAJoinTable {
 
     return getJoinColumns().stream()
         .map(JPAOnConditionItem::getLeftPath)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @SuppressWarnings("unchecked")
